// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using the FelaComponent component correctly combine extending rules 1`] = `
Array [
  "._1staekf {
    font-size: 15px
}

._sjf8sr {
    color: red
}

._mqmbfs {
    background-color: blue
}",
  <FelaComponent
    color="red"
    extend={[Function]}
    fontSize="15px"
    render={[Function]}
    rule={[Function]}
>
    <FelaTheme
        render={[Function]}
    >
        <div
            className="_1staekf _sjf8sr _mqmbfs"
        >
            I am red on blue and written in 15px.
        </div>
    </FelaTheme>
</FelaComponent>,
]
`;

exports[`Using the FelaComponent component correctly pass the theme 1`] = `
Array [
  "._1staekf {
    font-size: 15px
}

._sjf8sr {
    color: red
}",
  <FelaComponent
    color="red"
    render={[Function]}
    rule={[Function]}
>
    <FelaTheme
        render={[Function]}
    >
        <div
            className="_1staekf _sjf8sr"
        >
            I am red and written in 
            15px
            .
        </div>
    </FelaTheme>
</FelaComponent>,
]
`;

exports[`Using the FelaComponent component correctly render a fela rule 1`] = `
Array [
  "._1y3zu8o {
    font-size: 12px
}

._sjf8sr {
    color: red
}",
  <FelaComponent
    color="red"
    render={[Function]}
    rule={[Function]}
>
    <FelaTheme
        render={[Function]}
    >
        <div
            className="_1y3zu8o _sjf8sr"
        >
            I am red and written in 12px.
        </div>
    </FelaTheme>
</FelaComponent>,
]
`;
